Bug 1615213 - Support special back/forward mouse buttons. r=masayuki

Differential Revision: https://phabricator.services.mozilla.com/D111982